# flask-mega-tutorial

./: .flake8  .flaskenv  .pre-commit-config.yaml  app.db  config.py  microblog.py  pyproject.toml
app/: __init__.py  cli.py  config.py  email.py  errors.py  forms.py  models.py  routes.py  search.py  translate.py
app/auth/: __init__.py  forms.py  routes.py
app/errors/: __init__.py
app/main/: __init__.py  forms.py  routes.py
app/templates/: base.html  login.html  user.html
app/translations/es/LC_MESSAGES/: messages.po
migrations/versions/: 032a51d7be3f_posts_table.py  07af4cb5cfb2_.py  3cad94fe1f51_users_table.py  83fbb00e5303_add_user_data.py  8a2b73d0ae9b_add_followers_relationship.py
tests/: test_user.py
