[tool.poetry]
name = "flaskmegatutorial"
version = "0.1.0"
description = ""
authors = ["voightp <vojtechpanek@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
flask-login = "^0.6.2"
email-validator = "^2.0.0.post2"
flask-mail = "^0.9.1"
pyjwt = "^2.8.0"
flask-bootstrap = "^3.3.7.1"
flask-moment = "^1.0.5"
flask-babel = "^3.1.0"
langdetect = "^1.0.9"
requests = "^2.31.0"
elasticsearch = "^8.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"